Bug 580182.  Make dispose=previous actually work correctly.  r=joe, a=joe